# NexusMCP

./: .gitignore  README.md  package-lock.json  package.json  test.js
apps/api/: .env.example  WEBHOOK_SETUP.md  package-lock.json  package.json
apps/api/src/: index.ts
apps/api/src/config/: database.ts  env.ts  jwt.ts  passport.ts  postgres.ts
apps/api/src/data/: store.ts
apps/api/src/middleware/: index.ts
apps/api/src/models/: User.ts
apps/api/src/routes/: auth.ts  integrations.ts  logs.ts  mcp.ts  settings.ts  webhooks.ts  workflows.ts
apps/api/src/services/: mcp.ts  postgres-store.ts  webhook-loop-guard.ts  webhook-normalizer.ts  webhook-queue.ts  (+4 more)
apps/client/: .env.example  next-env.d.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/client/.next/: app-build-manifest.json  trace
apps/client/src/: middleware.ts
client/: .env.example  .gitignore  package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/context/: integrations-context.tsx  workflow-context.tsx
client/src/lib/: api.ts  utils.ts
client/src/types/: integration.ts  user.ts  workflow.ts
infra/db/init/: 001_schema.sql
infra/docker/: docker-compose.yml
server/: .env.example  .gitignore  package-lock.json  package.json
server/src/: index.ts
server/src/config/: passport.ts
server/src/data/: store.ts
server/src/models/: User.ts
server/src/routes/: auth.ts  integrations.ts  logs.ts
server/src/services/: mcp.ts
server/src/types/: index.ts
services/: requirements-all.txt  setup-python-services.ps1  start-agentic.ps1
services/agent-runtime/: pyproject.toml
services/agent-runtime/src/: __init__.py  executor.py  models.py
services/agentic/: .env.example  pyproject.toml
services/agentic/src/: __init__.py  config.py  flow_manager.py  gemini_client.py  models.py  server.py
services/agentic/src/agents/: __init__.py  base_agent.py  connector_agent.py  context_agent.py  default_flow_orchestrator.py  event_workflow_orchestrator.py  github_agent.py  gmail_agent.py  jira_agent.py  json_guard_agent.py  orchestrator_agent.py  planner_agent.py  required_api_agent.py  sheets_agent.py  slack_agent.py  smart_orchestrator.py  tool_planner_agent.py  tool_selection_agent.py
services/context-manager/: pyproject.toml
services/context-manager/src/: __init__.py  context.py  payload.py
services/mcp-connectors/: pyproject.toml
services/mcp-connectors/src/: __init__.py  base.py  github_connector.py  jira_connector.py  server.py  sheets_connector.py  slack_connector.py
services/workflow-engine/: pyproject.toml
services/workflow-engine/src/: __init__.py  dag_builder.py  planner.py
(+123 files in other folders)
