[project]
name = "mcp-connectors"
version = "0.1.0"
description = "MCP tool connectors for external services (Jira, Slack, GitHub, etc.)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "requests>=2.32.0",
    "jira>=3.5.0",
    "slack-sdk>=3.26.0",
    "pygithub>=2.1.0",
    "google-api-python-client>=2.108.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
